--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,7 +14,7 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.sampindo.id
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://raw.githubusercontent.com/SAMPINDO/status-page/master/assets/Favicon-1.ico
   name: SAMPINDO Status
   introTitle: "**SAMPINDO Status** is the open-source uptime monitor and status page, powered entirely by GitHub and upptime-status."
   introMessage: This is a status page which uses **real-time** data from our [GitHub repository](https://github.com/SAMPINDO/status-page). No server required — just GitHub Actions, Issues, and Pages.
